# AuraFW

./: .clang-tidy  .gitignore  LICENSE.txt  README.md
cmake/: arm_gnu_toolchain_utils.cmake  clang_device_build_toolchain_file.cmake  clang_host_build_toolchain_file.cmake  clang_host_toolchain.cmake  clang_with_arm_gnu_libs_device_toolchain.cmake  dependencies.cmake  device_executable.cmake  device_tests.cmake  device_utilities.cmake  static_code_analysis.cmake  utilities.cmake
device/: CMakeLists.txt  clang_init.c  custom_alloc.c  custom_terminate.cpp  main.cpp
device/cube/: cube_sources.cmake
device/cube/Aura/: .mxproject  Aura.ioc  Makefile  STM32L432KCUx_FLASH.ld
device/cube/Aura/Core/Inc/: stm32l4xx_hal_conf.h
device/cube/Aura/Core/Src/: freertos.c
device/serial_logger/: CMakeLists.txt  serial_logger.cpp  serial_logger.hpp
docs/: requirements.md
host/: CMakeLists.txt
scripts/: capture_serial_in_background.py  drive_device_test.py  fix_test_runner_after_generation.py  rename_main_to_test_main.py
src/common/: CMakeLists.txt  app_simulation.cpp  app_simulation_with_static_polymorphism_and_active_using_method_pointers.cpp  app_simulation_with_static_polymorphism_and_parted_active.cpp  app_simulation_with_static_polymorphism_with_crtp.cpp  collector.hpp  collector_using_static_polymorphizm.hpp  collector_using_static_polymorphizm_with_crtp.hpp  dummy_fakes.hpp  loggable.hpp  main.cpp  measurement_scheduler.hpp  measurer.hpp  native_timer.hpp  periodical_timer.hpp  publisher.hpp  thread_running_in_current_context.hpp
src/common/app/: basic_array_store.hpp  sender_impl.hpp
src/common/interfaces/: listener.hpp  measurer.hpp  notifiable.hpp  sender.hpp  store.hpp
src/common/utils/: active.hpp  active_with_compile_time_actors.hpp  active_with_compile_time_actors_being_method_pointers.hpp  active_with_compile_time_actors_parted.hpp  function_traits.hpp  signal.hpp  signal_compile_time.hpp  signal_std_array_based_with_compile_time_connections.hpp  signal_std_tuple_based_with_compile_time_connections.hpp
src/device/: CMakeLists.txt  custom_terminate.cpp
src/device/cube/: CMakeLists.txt
src/device/cube/Aura/: .mxproject
src/device/cube/Aura/Core/Src/: freertos.c
src/device/serial_logger/: CMakeLists.txt
src/dynamic/: CMakeLists.txt  active_impl.hpp  basic_array_store.hpp  collector.hpp  events.hpp  main.cpp  message_pump_impl.hpp  native_timer.hpp  signal.hpp  thread_impl.hpp
src/dynamic/interfaces/: active.hpp  measurer.hpp  message_pump.hpp  notifiable.hpp  observer.hpp  sender.hpp  store.hpp  thread.hpp
src/host/: CMakeLists.txt
tests/device/: CMakeLists.txt  catch2_main.cpp  dummy_test.cpp  main.cpp
tests/device/setup/: CMakeLists.txt  test_runner.cpp  unity_putchar.cpp
tests/device/test_serial_logger/: CMakeLists.txt  test_serial_logger.cpp
tests/host/: CMakeLists.txt  benchmark_signal_std_array_based.cpp  benchmark_signal_std_tuple_based.cpp  test_active_with_compile_time_actors.cpp  test_measurement_scheduler.cpp  test_signal_with_compile_time_connections.cpp
tests/host/test_loggable/: CMakeLists.txt  empty_logger.hpp  logger_with_all_stream_operator_overloads_defined.h  logger_with_no_log_method.hpp  logger_with_no_stream_operator_defined_for_char.hpp  logger_with_no_stream_operator_defined_for_float.hpp  logger_with_no_stream_operator_defined_for_int.hpp  logger_with_no_stream_operator_defined_for_string.hpp  logger_with_no_stream_operator_defined_for_unsigned.hpp  logger_with_no_stream_operator_defined_for_unsigned_char.hpp  logger_with_stream_operator_for_float_and_string_overloaded.hpp  logger_with_stream_operator_overloaded_as_template.h  test_loggable.cpp.in
