add_library(aura_common INTERFACE)
target_include_directories(aura_common INTERFACE ${CMAKE_CURRENT_LIST_DIR})

add_executable(aura_simulation main.cpp)
target_link_libraries(aura_simulation aura_common)

add_executable(aura_simulation_with_static_polymorphism app_simulation.cpp)
target_link_libraries(aura_simulation_with_static_polymorphism aura_common jungles::os_helpers)

add_executable(aura_simulation_with_static_polymorphism_with_crtp app_simulation_with_static_polymorphism_with_crtp.cpp)
target_link_libraries(aura_simulation_with_static_polymorphism_with_crtp aura_common)
