##########################################################################################
# Functions and macros
##########################################################################################

##########################################################################################
# Main script
##########################################################################################
ProvideGoogleTestForDevice()

add_executable(dummy_test dummy_test.cpp)
MakeDeviceExecutable(dummy_test)
target_link_libraries(dummy_test PRIVATE gtest)