##########################################################################################
# Functions and macros
##########################################################################################

##########################################################################################
# Main script
##########################################################################################
include(../../cmake/device_tests.cmake)

ProvideUnity()

add_subdirectory(setup)